[gd_scene load_steps=7 format=3 uid="uid://d1s6ewff332kj"]

[ext_resource type="Theme" uid="uid://os4yjvatm7cf" path="res://Button.tres" id="1_4m8pw"]
[ext_resource type="Script" path="res://LangDocs/prog_58b.gd" id="1_qnypb"]
[ext_resource type="Theme" uid="uid://bkhm7mblj1udd" path="res://BigFont.tres" id="3_toyq0"]

[sub_resource type="Theme" id="Theme_yq4yq"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_kc54c"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_msn6a"]
default_font_size = 30

[node name="Prog_58b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qnypb")

[node name="A" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = 50.0
offset_right = 224.0
offset_bottom = 180.0

[node name="B" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 55.0
offset_right = 686.0
offset_bottom = 185.0

[node name="C" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 925.0
offset_top = 57.0
offset_right = 1154.0
offset_bottom = 187.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 223.0
offset_bottom = 53.0
theme = SubResource("Theme_yq4yq")
text = "A"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 461.0
offset_top = 5.0
offset_right = 684.0
offset_bottom = 58.0
theme = SubResource("Theme_kc54c")
text = "B"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 930.0
offset_right = 1153.0
offset_bottom = 53.0
theme = SubResource("Theme_msn6a")
text = "C"
horizontal_alignment = 1

[node name="Calc" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 546.0
offset_right = 221.0
offset_bottom = 648.0
theme = ExtResource("1_4m8pw")
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 454.0
offset_top = 542.0
offset_right = 672.0
offset_bottom = 644.0
theme = ExtResource("1_4m8pw")
text = "Clear"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 933.0
offset_top = 546.0
offset_right = 1151.0
offset_bottom = 648.0
theme = ExtResource("1_4m8pw")
text = "Quit"

[node name="Answer" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 202.0
offset_right = 1142.0
offset_bottom = 534.0
theme = ExtResource("3_toyq0")
text = "l"

[connection signal="pressed" from="Calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
